--- a/devops.html
+++ b/devops.html
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://yiluhub.join.com/jobs/473968-senior-devops-engineer'>Job @ Yilu Travel Services (Berlin): Senior DevOps... | JOIN</a></h5> 
+<h5><a href='https://yiluhub.join.com/jobs/473968-senior-devops-engineer'>Job @ Yilu Travel Services (Berlin): Senior DevOps... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dalet.recruitee.com/o/devops-engineer-media-supply-chain-platform'>
+<h5><a href='https://dalet.recruitee.com/o/devops-engineer-media-supply-chain-platform'>
       DevOps Engineer (Media Supply Chain Platform) - DALET
     </a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
@@ -112,7 +112,7 @@
 <p><span class="badge badge-light">San Antonio, TXSan Antonio, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/t0akc140uq/DevOps-Engineer'>DevOps Engineer - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/t0akc140uq/DevOps-Engineer'>DevOps Engineer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -120,11 +120,11 @@
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698582514-devops-engineer-ii'>Verisk DevOps Engineer II | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698582514-devops-engineer-ii'>Verisk DevOps Engineer II | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://it-economics.join.com/jobs/462464-devops-engineer-m-w-d'>Job @ it-economics (Munich): DevOps Engineer (m/w/d) | JOIN</a></h5> 
+<h5><a href='https://it-economics.join.com/jobs/462464-devops-engineer-m-w-d'>Job @ it-economics (Munich): DevOps Engineer (m/w/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -222,11 +222,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/devops--site-reliability-engineer-okta-access-gateway-senior--staff-1690396/?gh_src=82a8057f1'>DevOps/ Site Reliability Engineer, Okta Access Gateway (Senior/ Staff) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/devops--site-reliability-engineer-okta-access-gateway-senior--staff-1690396/?gh_src=82a8057f1'>DevOps/ Site Reliability Engineer, Okta Access Gateway (Senior/ Staff) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://onedot.join.com/jobs/468251-devops-engineer-intern'>Job @ Onedot (Schlieren): DevOps Engineer Intern | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://onedot.join.com/jobs/468251-devops-engineer-intern'>Job @ Onedot (Schlieren): DevOps Engineer Intern | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -294,7 +294,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://techflow.applytojob.com/apply/iael3W0CxB/DevOps-Engineer'>DevOps Engineer - TechFlow - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://techflow.applytojob.com/apply/iael3W0CxB/DevOps-Engineer'>DevOps Engineer - TechFlow - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 19, 2019 ... Apply to DevOps Engineer at TechFlow in Reston, VA.</p>
 <hr/>
@@ -308,7 +308,7 @@ agencies and the people they serve.</p>
 <p>Oct 22, 2019 ... Objective. Togo Group is seeking an IT Support & DevOps Engineer to help lead 
 internal IT operations. You will be completing tasks in support of our IT functions?...</p>
 <hr/>
-<h5><a href='https://srijantech.recruiterbox.com/jobs/fk03ilg/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://srijantech.recruiterbox.com/jobs/fk03ilg/'>
     DevOps - Engineering Manager at Srijan Technologies Pvt Ltd
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -357,7 +357,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://impraise.recruitee.com/o/devops-engineer-medior'>
+<h5><a href='https://impraise.recruitee.com/o/devops-engineer-medior'>
       DevOps Engineer Medior - Impraise
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
@@ -403,7 +403,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Mc Lean, VAMc Lean, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/dae/jobs/cloud-devops-engineer-ts-sci-with-polygraph-dEr6Omop8r6yKbcR_n82lY'>Cloud DevOps Engineer - TS/SCI with Polygraph #0421 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/cloud-devops-engineer-ts-sci-with-polygraph-dEr6Omop8r6yKbcR_n82lY'>Cloud DevOps Engineer - TS/SCI with Polygraph #0421 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -435,7 +435,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://abcfinlab.join.com/jobs/448535-devops-engineer-m-w-x'>Job @ abcfinlab (Cologne): DevOps Engineer (m/w/x) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://abcfinlab.join.com/jobs/448535-devops-engineer-m-w-x'>Job @ abcfinlab (Cologne): DevOps Engineer (m/w/x) | JOIN</a></h5> 
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -455,7 +455,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://apply.workable.com/ontruck/j/242EE31552/'>DevOps and Infrastructure Engineer - Ontruck</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/ontruck/j/242EE31552/'>DevOps and Infrastructure Engineer - Ontruck</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Significant past experience in both software engineering and cloud-based ops, 
 such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
